Fix Workspace title align on hover

--- a/app/workspaces/list.less
+++ b/app/workspaces/list.less
@@ -106,10 +106,12 @@
       }
       .workspace-details.in-folder {
         margin-top: -45px;
+        margin-bottom: 27px;
 
         .view {
           display: block;
           text-align: center;
+          line-height: 18px;
           color: @skyblue;
         }
         .dash {
